# Authentication-Service

./: .gitattributes  .gitignore  .prettierrc  .python-black  README.md  SECURITY.md  compose.yml
.github/: dependabot.yml
api/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
api/app/: main.py  version.py
api/app/controllers/: authentication.py  base.py
api/app/models/: app.py  user.py
api/app/repositories/: application.py  base.py  user.py
api/app/routers/: __init__.py  application.py  home.py  login.py  mfa.py  register.py
api/app/routes/v1/: __init__.py
api/app/schemas/: application.py  common.py  device_fingerprint.py  ip_blocklist.py  user.py
api/app/services/: authentication.py  base.py
api/app/templates/: registration_email_v1.html
api/app/utility/: authentication.py  database.py  response.py  security.py
api/app/utility/email/: sender.py
api/app/utility/security/: mfa.py  password.py  tokens.py
api/app/utils/: database.py
api/app/utils/email/: config.py  schemas.py
api/app/utils/security/: encryption.py  hashing.py  mfa.py  tokens.py
api/app/v1/: __init__.py
api/app/v1/controllers/: __init__.py  application.py  base.py  register.py
api/app/v1/routes/: application.py
api/app/v1/schemas/: application.py  common.py  email.py  mfa_backup_code.py  password_reset_token.py  pending_user.py  security_event.py  user.py
api/tests/: test_home.py
api/tests/test_utility/: conftest.py  test_create_verification_token.py  test_encrypt_field.py  test_hash_field.py  test_verify_otp.py  test_verify_password.py
(+103 files in other folders)
